# gPRC_Project

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
proto/: chat.proto  game.proto
scripts/: package-native-client.ps1  start-cloud-chat.ps1
src/: chat_cli.cpp  chat_server.cpp  game_server.cpp  native_game_client.cpp  web_gateway.cpp
web/: game.html  index.html
